fix compiling with jdk-17